syntax = "proto3";

package mycachepb;

option go_package = "./;mycachepb";

message GetRequest {
  string group = 1;
  string key = 2;
}

message GetResponse {
  bytes value = 1;
  double minute_qps = 2;
}

service MyCache {
  rpc Get(GetRequest) returns (GetResponse) {
  };
}
